--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -3,7 +3,7 @@
 
 fa:
   back: "بازگشت"
-  home: "خانه"
+  home: "صفحه اصلی"
   products_section:
     title: "محصولات"
     new_product: "ایجاد محصول"
