--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -4,6 +4,11 @@
 fa:
   back: "بازگشت"
   home: "صفحه اصلی"
+  
+  Products: "محصولات"
+  Services: "خدمات"
+  Introduction: "   ایران- تهران – خیابان آپادانا (خرمشهر) – خیابان نوبخت (عرب علی)- پلاک ۳۸ – واحد ۳  تلفن: +۹۸۲۱۸۸۵۲۹۵۶۵  تلفکس: +۹۸۲۱۸۸۵۲۹۸۶۴"
+
   products_section:
     title: "محصولات"
     new_product: "ایجاد محصول"
