--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -8,7 +8,11 @@ fa:
   Products: "محصولات"
   Services: "خدمات"
   Introduction: "   ایران- تهران – خیابان آپادانا (خرمشهر) – خیابان نوبخت (عرب علی)- پلاک ۳۸ – واحد ۳  تلفن: +۹۸۲۱۸۸۵۲۹۵۶۵  تلفکس: +۹۸۲۱۸۸۵۲۹۸۶۴"
-
+  welcom_pan: "شرکت"
+  Index_Page: "لیست صفحات"
+  IDM: "ایده طرح ماشین"
+  IDM_Page:  "ایده طرح ماشین"
+  
   products_section:
     title: "محصولات"
     new_product: "ایجاد محصول"
