--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -9,10 +9,17 @@ fa:
   Services: "خدمات"
   Introduction: "   ایران- تهران – خیابان آپادانا (خرمشهر) – خیابان نوبخت (عرب علی)- پلاک ۳۸ – واحد ۳  تلفن: +۹۸۲۱۸۸۵۲۹۵۶۵  تلفکس: +۹۸۲۱۸۸۵۲۹۸۶۴"
   welcom_pan: "شرکت"
-  Index_Page: "لیست صفحات"
+  Page: "لیست صفحات"
+  Product: "محصولات"
+  Service: "خدمات"
+  Slider: "اسلایدر"
+  
   IDM: "ایده طرح ماشین"
   IDM_Page:  "ایده طرح ماشین"
-  
+  IDM_Product:  "ایده طرح ماشین"
+  IDM_Service:  "ایده طرح ماشین"
+  IDM_Slider:  "ایده طرح ماشین"
+    
   products_section:
     title: "محصولات"
     new_product: "ایجاد محصول"
