--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -19,6 +19,8 @@ fa:
   IDM_Product:  "ایده طرح ماشین"
   IDM_Service:  "ایده طرح ماشین"
   IDM_Slider:  "ایده طرح ماشین"
+  
+  More: "ادامه مطلب"
     
   products_section:
     title: "محصولات"
