fix design part 18

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -9,7 +9,7 @@ fa:
   Services: "خدمات"
   Introduction: "   ایران- تهران – خیابان آپادانا (خرمشهر) – خیابان نوبخت (عرب علی)- پلاک ۳۸ – واحد ۳  تلفن: +۹۸۲۱۸۸۵۲۹۵۶۵  تلفکس: +۹۸۲۱۸۸۵۲۹۸۶۴"
   welcom_pan: "شرکت"
-  Page: "لیست صفحات"
+  Page: "صفحات متنی"
   Product: "محصولات"
   Service: "خدمات"
   Slider: "اسلایدر"
